alterações cores hover

--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
           <!-- Denúncia -->
           <a
             href="#"
-            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item denuncia-card hover:bg-red-100"
+            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item denuncia-card hover:bg-red-200"
           >
             <i class="ri-alarm-warning-line text-3xl md:text-4xl mb-3 md:mb-4" style="color: #057ae8"></i>
             <h3 class="text-sm md:text-base font-semibold text-gray-800">
@@ -886,7 +886,7 @@
           <!-- Elogio -->
           <a
             href="#"
-            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item elogio-card hover:bg-blue-100"
+            class="block bg-white rounded-lg shadow-md p-4 md:p-6 text-center transform transition-transform duration-300 hover:scale-105 border-b-4 border-[#057ae8] cidadao-item elogio-card hover:bg-blue-200"
           >
             <i class="ri-thumb-up-line text-3xl md:text-4xl mb-3 md:mb-4" style="color: #057ae8"></i>
             <h3 class="text-sm md:text-base font-semibold text-gray-800">
@@ -1360,7 +1360,7 @@
       <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div>
-            <div class="text-2xl mb-4">Gabnet</div>
+            <div class="text-2xl mb-4">Conecta Ariquemes</div>
             <p class="">
               Portal do Cidadão é uma plataforma de serviços e informações do
               município de Ariquemes-RO.
@@ -1403,7 +1403,7 @@
         </div>
         <div class="mt-8 pt-8 border-t border-b-white">
           <p class="text-center">
-            &copy; 2025 GABNET. Desenvolvido por
+            &copy; 2025 Conecta Ariquemes. Desenvolvido por
             <a
               href="https://www.datafull.com.br/"
               target="_blank"
