--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
               <a href="/" class="text-white hover:text-gray-200 text-2xl">Início</a>
               <a href="#" class="text-white hover:text-gray-200 text-2xl">Sobre</a>
               <a href="#" class="text-white hover:text-gray-200 text-2xl">Contato</a>
+              <a href="noticia-interna.html" class="text-white hover:text-gray-200 text-2xl">Notícias</a>
             </div>
           </div>
         </div>
@@ -554,6 +555,9 @@
                 <a href="#" class="text-[#0061e8] hover:text-primary">Sobre</a>
                 <a href="#" class="text-[#0061e8] hover:text-primary"
                   >Contato</a
+                >
+                <a href="noticia-interna.html" class="text-[#0061e8] hover:text-primary"
+                  >Notícias</a
                 >
               </div>
             </div>
@@ -1120,77 +1124,93 @@
           <div class="owl-carousel owl-theme noticias-carousel">
             <div class="item">
               <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-shadow h-full">
-                <img
-                  src="src/images/noticias/IMG_1.jpg"
-                  alt="Evento Cultural"
-                  class="w-full h-48 object-cover"
-                />
+                <a href="noticia-interna.html">
+                  <img
+                    src="src/images/noticias/IMG_1.jpg"
+                    alt="Evento Cultural"
+                    class="w-full h-48 object-cover"
+                  />
+                </a>
                 <div class="p-6">
-                  <h3 class="font-semibold mb-2">
-                    Vereadores participam do Encontro Regional de Ovinocultores de
-                    Rondônia
-                  </h3>
+                  <a href="noticia-interna.html">
+                    <h3 class="font-semibold mb-2">
+                      Vereadores participam do Encontro Regional de Ovinocultores de
+                      Rondônia
+                    </h3>
+                  </a>
                   <p class="text-gray-600 mb-4">20 Fevereiro 2025</p>
-                  <button class="text-primary hover:underline !rounded-button">
+                  <a href="noticia-interna.html" class="text-primary hover:underline !rounded-button">
                     Saiba mais
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
             <div class="item">
               <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-shadow h-full">
-                <img
-                  src="src/images/noticias/IMG_2.jpg"
-                  alt="Evento Esportivo"
-                  class="w-full h-48 object-cover"
-                />
+                <a href="noticia-interna.html">
+                  <img
+                    src="src/images/noticias/IMG_2.jpg"
+                    alt="Evento Esportivo"
+                    class="w-full h-48 object-cover"
+                  />
+                </a>
                 <div class="p-6">
-                  <h3 class="font-semibold mb-2">
-                    Vereadores aprovam cinco proposituras durante a Sessão
-                    Ordinária
-                  </h3>
+                  <a href="noticia-interna.html">
+                    <h3 class="font-semibold mb-2">
+                      Vereadores aprovam cinco proposituras durante a Sessão
+                      Ordinária
+                    </h3>
+                  </a>
                   <p class="text-gray-600 mb-4">18 Fevereiro 2025</p>
-                  <button class="text-primary hover:underline !rounded-button">
+                  <a href="noticia-interna.html" class="text-primary hover:underline !rounded-button">
                     Saiba mais
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
             <div class="item">
               <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-shadow h-full">
-                <img
-                  src="src/images/noticias/IMG_3.jpg"
-                  alt="Evento Tecnológico"
-                  class="w-full h-48 object-cover"
-                />
+                <a href="noticia-interna.html">
+                  <img
+                    src="src/images/noticias/IMG_3.jpg"
+                    alt="Evento Tecnológico"
+                    class="w-full h-48 object-cover"
+                  />
+                </a>
                 <div class="p-6">
-                  <h3 class="font-semibold mb-2">
-                    Vereadores definem composição das Comissões Permanentes para
-                    2025
-                  </h3>
+                  <a href="noticia-interna.html">
+                    <h3 class="font-semibold mb-2">
+                      Vereadores definem composição das Comissões Permanentes para
+                      2025
+                    </h3>
+                  </a>
                   <p class="text-gray-600 mb-4">04 Fevereiro 2025</p>
-                  <button class="text-primary hover:underline !rounded-button">
+                  <a href="noticia-interna.html" class="text-primary hover:underline !rounded-button">
                     Saiba mais
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
             <!-- Nova notícia adicional -->
             <div class="item">
               <div class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-shadow h-full">
-                <img
-                  src="src/images/noticias/IMG_1.jpg"
-                  alt="Notícia adicional"
-                  class="w-full h-48 object-cover"
-                />
+                <a href="noticia-interna.html">
+                  <img
+                    src="src/images/noticias/IMG_1.jpg"
+                    alt="Notícia adicional"
+                    class="w-full h-48 object-cover"
+                  />
+                </a>
                 <div class="p-6">
-                  <h3 class="font-semibold mb-2">
-                    Câmara promove audiência pública sobre segurança municipal
-                  </h3>
+                  <a href="noticia-interna.html">
+                    <h3 class="font-semibold mb-2">
+                      Câmara promove audiência pública sobre segurança municipal
+                    </h3>
+                  </a>
                   <p class="text-gray-600 mb-4">15 Fevereiro 2025</p>
-                  <button class="text-primary hover:underline !rounded-button">
+                  <a href="noticia-interna.html" class="text-primary hover:underline !rounded-button">
                     Saiba mais
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -1422,7 +1442,7 @@
         <i class="ri-home-2-line text-4xl"></i>
         <span class="text-xs mt-1">Início</span>
       </a>
-      <a href="#" class="text-white flex flex-col items-center">
+      <a href="noticia-interna.html" class="text-white flex flex-col items-center">
         <i class="ri-news-line text-4xl"></i>
         <span class="text-xs mt-1">Notícias</span>
       </a>
