--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
         <div class="px-4 py-6">
           <div class="flex justify-between items-center">
             <div class="flex items-center">
-              <img src="src/images/logo-white2.svg" alt="Conecta Ariquemes Logo" class="h-6" />
+              <img src="src/images/logo-branco.svg" alt="Conecta Ariquemes Logo" class="h-14" />
             </div>
             <div class="flex items-center space-x-4">
               <div class="w-8 h-8 flex items-center justify-center text-white cursor-pointer">
@@ -545,9 +545,9 @@
       <!-- Header Desktop -->
       <nav class="bg-white shadow-sm hidden md:block">
         <div class="max-w-7xl mx-auto px-4">
-          <div class="flex justify-between h-16">
+          <div class="flex justify-between h-20">
             <div class="flex items-center">
-              <img src="src/images/logo2.svg" alt="Conecta Ariquemes Logo" class="h-6" />
+              <img src="src/images/logo.svg" alt="Conecta Ariquemes Logo" class="h-14" />
               <div class="hidden md:flex space-x-8 ml-10">
                 <a href="portal.html" class="text-[#0061e8] hover:text-primary"
                   >Início</a
@@ -1342,7 +1342,7 @@
                     Câmara Municipal
                   </h3>
                   <a
-                    href="https://camaradeariquemes.ro.gov.br/"
+                    href="https://transparencia.camaradeariquemes.ro.gov.br/"
                     target="_blank"
                     title="Câmara Municipal de Ariquemes"
                     class="inline-flex items-center bg-primary text-white px-4 md:px-6 py-1.5 md:py-2 rounded-button hover:bg-primary/90 text-sm md:text-base"
